--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Stop watch</h1>
+  <div class="clock">
+    <div class="clock__center">
+      <div class="clock__second"></div>
+      <div class="clock__minute"></div>
+    </div>
+  </div>
 </body>
 </html>
