--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
   <div class="clock">
-    <div class="clock__center">
-      <div class="clock__second"></div>
-      <div class="clock__minute"></div>
-    </div>
+    <div class="clock__center"></div>
+    <div class="clock__second"></div>
+    <div class="clock__minute"></div>
   </div>
 </body>
 </html>
